# fastai-lesson2

./: .gitignore  README.md  _config.yml  app.js  index.html  pyproject.toml  server.py
.env/: pyvenv.cfg
notebooks/: dogs_cats.ipynb  server.ipynb
ui/: app.js  index.html
